<resources>
    <string name="app_name">HarvestHand</string>
    <string name="title_activity_entry_tutorial">EntryTutorialActivity</string>
    <string name="title_activity_sign_up">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_your_email">Your Email</string>
    <string name="input_your_password">Your Password</string>
    <string name="welcome_to_harvesthand">Welcome to HarvestHand</string>
    <string name="about">About us</string>
    <string name="input_your_name">Your Name</string>
    <string name="profi">Advanced</string>
    <string name="user">User</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="errmsg_email_required">Please enter you Email</string>
    <string name="errmsg_valid_input_required">Valid input required!</string>
    <string name="errmsg_name_required">Please enter Name</string>
    <string name="errmsg_pass_required">Please enter Password</string>
    <string name="msg_choice_typeandgender">Please select Usertype and Gender!</string>
    <string name="msg_internal_error">Internal Error! Please try again</string>
    <string name="msg_email_exist">This Email already in use!</string>
    <string name="msg_signup_success">Registration successful!</string>
    <string name="connection_err">Connection error!</string>
    <string name="msg_email_or_passwort_incorrect">Email or Passwort incorrect!</string>
    <string name="msg_login_successful">Login successful</string>
    <string name="msg_404_error">Error! Resource not found</string>
    <string name="msg_no_internet_connection">No internet connection!</string>
    <string name="new_entry_hint_name">Name</string>
    <string name="new_entry_hint_location">Location</string>
    <string name="new_entry_hint_area">Land area</string>
    <string name="new_entry_hint_height">Height in Meter</string>
    <string name="new_entry_hint_airtemp">Air temp</string>
    <string name="new_entry_hint_ph">PH</string>
    <string name="label_new_entry">New Entry</string>
    <string name="delete_menu_item">Delete</string>
    <string name="done_menu_item">Done</string>
    <string name="person_menu_item">Person</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="title_activity_entry_details">EntryDetails</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="text_crop">Crop</string>
    <string name="text_soil_temp">Soil Temp.</string>
    <string name="text_soil_moisture">Soil moisture</string>
    <string name="text_soil">Soil</string>
    <string name="menu_item_speech">Speech</string>
    <string name="entry_tutorial_activity_label">Tutorial</string>
    <string name="dialog_enter_ip_address">Enter IP Address</string>
    <string name="input_ip_address">IP Address</string>
    <string name="dialog_button_save">save</string>
    <string name="dialog_ip_saved">IP saved</string>
    <string name="dialog_please_enter_ip">Please enter IP</string>
    <string name="dialog_ip_discard">discard</string>
    <string name="dialog_ip_not_changed">IP not changed</string>
    <string name="item_menu_edit">Edit</string>
    <string name="delete_dialog_msg">Delete this Entry?</string>
    <string name="button_delete">DELETE</string>
    <string name="dialog_button_cancel">CANCEL</string>
</resources>
