<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enter_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_enter_ip_address"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/input_enter_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/input_ip_address"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        />

    <Button
        android:id="@+id/save_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_save"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/discard_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ip_discard"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

</LinearLayout>